Complete Basic Authentication

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 			<input type='text' name='randomData'>
 		</form>
 		<a href="/auth/provider">Log In</a> -->
-		<form action="/login" method="get">
+		<form action="/login" method="post">
 			Log into Account
 	    	<div>
 		        <label>Username:</label>
