push to deployment

--- a/test.html
+++ b/test.html
@@ -1,34 +1,4 @@
 <html>
-  <head></head>
-  <body>
-  wah
-  </body>
-  <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            appId      : '1454682164794827',
-            xfbml      : true,
-            version    : 'v2.1'
-          });
-          FB.login(function(response) {
-             if (response.authResponse) {
-               console.log('Welcome!  Fetching your information.... ');
-               FB.api('/me', function(response) {
-                 console.log('Good to see you, ' + response.name + '.');
-               });
-             } else {
-               console.log('User cancelled login or did not fully authorize.');
-             }
-          });
-        };
-
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "//connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
-
-  </script>
+  <body></body>
+  <script>window.close();</script>
 </html>
